add filter, custom formatter and expression

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,11 @@
 title=Title
 appTitle=Exercise3
 appDescription=App Description
+productsListSupplier=Suppliers
+productsListProduct=Products
+productsListStatus=Status
+productsListDimensions=Dimentsions
+productsListWeight=Weight
+productsListPrice=Price
+tableTitle=Products Table
+productsListTitle=title
